--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -3679,7 +3679,6 @@ form .row {
   color: #fff;
 }
 .loan-amount {
-  background: rgba(147, 224, 111, 0.1);
   border-radius: 15px;
   padding: 20px;
   margin-top: 20px;
@@ -3702,7 +3701,7 @@ form .row {
   line-height: 38px;
   margin-bottom: 0px;
   /* padding-bottom: 0px; */
-  color: #56be15;
+  /* color: #56be15; */
   text-align: center;
   text-transform: capitalize;
   padding-bottom: 10px;
@@ -7089,12 +7088,12 @@ ul.recent-act-lw-main .act-info-wrap-left {
   margin-left: 15px;
 }
 /* Added on 08-05 */
-button.schedule-pay-btn{
+button.schedule-pay-btn {
   border: 0px;
   background-color: transparent;
   padding: 0px;
 }
-.schedule-time-modal .modal-body form{
+.schedule-time-modal .modal-body form {
   width: 100%;
   max-width: 350px;
 }
@@ -7130,18 +7129,18 @@ button.schedule-pay-btn{
   margin: 0px !important;
   padding: 5px;
 }
-.schedule-time-modal .react-datepicker__day--selected{
+.schedule-time-modal .react-datepicker__day--selected {
   background-color: var(--blue);
   color: #fff !important;
 }
-.schedule-time-modal .react-datepicker__header{
+.schedule-time-modal .react-datepicker__header {
   background-color: transparent;
   border-bottom: 1px solid var(--dark_blue);
 }
 .schedule-time-modal .react-time-picker__wrapper {
   border: none;
 }
-.right-activity-div>button:not(:last-child) {
+.right-activity-div > button:not(:last-child) {
   margin-right: 10px;
 }
 .right-activity-div button.act-edit-wrap,
@@ -7152,7 +7151,7 @@ button.schedule-pay-btn{
 }
 .schedule-pay-sd-wrap {
   padding-bottom: 15px;
-  border-bottom: 2.5px solid #F2F2F2;
+  border-bottom: 2.5px solid #f2f2f2;
   margin-bottom: 15px;
   display: flex;
   justify-content: end;
@@ -7166,6 +7165,6 @@ button.shedule-date-filter {
   width: 32px;
   height: 32px;
 }
-button.shedule-date-filter:hover{
+button.shedule-date-filter:hover {
   background-color: var(--dark_blue);
 }
