commit 0.1.0 added changes for print-details, bug-fixing, schedule-confirmation 18-May-2023

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -6106,7 +6106,7 @@ div.settings-note-inner-sec.setting-noti-sec-new {
 }
 .notification-pg-list-wrap ul li.un-read-notification,
 .notification-dd-wrap ul li.un-read-notification {
-  background: var(--blue) 0d;
+  background: #0081c50d;
 }
 .notification-rm-wrap svg {
   cursor: pointer;
